[package]
name = "ruvchain-connector"
version = "0.1.1"
edition = "2018"
authors = [ "ruvcoindev <admin@ruvcha.in>" ]
license = "GPL-3.0"
repository = "https://github.com/ruvcoindev/ruvchain-connector"
default-run = "ruvchain-connector"

[[bin]]
name = "ruvchain-connector"

[[bin]]
name = "stun-test"

[dependencies]
bytecodec = "0.4"
bytes = { version = "1.5", features = [ "serde" ] }
clap = { version = "4.4", features = [ "derive" ] }
futures = { version = "0.3" }
rand = { version = "0.8", features = [ "std_rng" ] }
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
socket2 = { version = "0.5", features = [ "all" ] }
stun_codec = "0.3"
tokio-util = { version = "0.7", features = [ "full" ] }
tokio = { version = "1.33", features = [ "full" ] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
ruvchainctl = { version = "1.0.0", default-features = false, features = [ "use_tokio" ] }
strum = "0.26"
strum_macros = "0.26"
itertools = "0.13"
